--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ pest = "2.1.2"
 pest_derive = "2.1.0"
 clap = "2.33.0"
 rand = "0.7.2"
+linefeed = "0.6.0"
 
 [dependencies.annotate-snippets]
 version = "0.6.1"
