--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ pest_derive = "2.1.0"
 clap = "2.33.0"
 rand = "0.7.2"
 linefeed = "0.6.0"
+num-rational = "0.2.2"
 
 [dependencies.annotate-snippets]
 version = "0.6.1"
